# reminder-scheduler

./: .travis.yml  CHANGELOG.rst  Dockerfile  README.rst  manage.py  pyproject.toml  requirements-dev.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: docker-build.yaml  test.yaml
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  production.py  test.py
quickreplies/: README.md  admin.py  apps.py  models.py  tests.py  urls.py  views.py
quickreplies/migrations/: 0001_add_quickreply.py
rapidpro_api/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
rapidpro_api/migrations/: 0001_initial.py
scheduler/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_auto_20201006_1617.py  0002_auto_20201007_0930.py
scheduler/tests/: test_views.py
